--- a/produto.html
+++ b/produto.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Cliente</title>
+    <title>Produto</title>
 </head>
-
 <body>
     <div class="container">
-        <h2 class="text-center">Cadastro de cliente</h2>
+        <h2 class="text-center">Cadastro de produto</h2>
 
         <form>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="input-group mb-3">
                         <span class="input-group-text">Nome:</span>
                         <input type="text" class="form-control">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="input-group mb-3">
-                        <span class="input-group-text">Documento:</span>
+                        <span class="input-group-text">Valor:</span>
                         <input type="text" class="form-control">
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
                     <div class="input-group mb-3">
-                        <span class="input-group-text">Endereço:</span>
-                        <input type="text" class="form-control">
+                        <span class="input-group-text">Quantidade:</span>
+                        <input type="number" class="form-control">
                     </div>
                 </div>
             </div>
@@ -46,5 +42,4 @@
         </form>
     </div>
 </body>
-
 </html>
